Finished form thingy mostly

--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
 
-                <button class="form-button">ACCEPT</button>
+                <button role = "submit" class="form-button">ACCEPT</button>
             </form>
         </div>
         <div id="main">
