--- a/MS-Projekat-3-main/app/pages/divider/divider.html
+++ b/MS-Projekat-3-main/app/pages/divider/divider.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Divider</h1>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
