--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -25,11 +25,12 @@
 
                 <div class="form-group">
                     <label for="">
-                        16:
+                        16 bit
                         <input type="radio" name="bits" value="16">
                     </label>
-                        32:
+                
                     <label for="">
+                        32 bit
                         <input type="radio" name="bits" value="32">
                     </label>
                 </div>
