--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -51,6 +51,7 @@
         <div id="main">
         </div>
         <button class="test" defer>TEST</button>
+        <button class="undo" defer>UNDO</button>
     </div>
     <script src="app.js" type="module"></script>
 </body>
