Finished multiplier page logic and html and handling seesion error(s)

--- a/MS-Projekat-3-main/app/pages/divider/divider.html
+++ b/MS-Projekat-3-main/app/pages/divider/divider.html
@@ -8,7 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Divider</h1>
+    <div class="divident">
+        <div id="divident-view-port"></div>
+    </div>
+    <div class="divisor">
+        <div id="divisor-view-port"></div>
+    </div>
+    <div class="product">
+        <div id="product-view-port"></div>
+    </div>
     <script src="app.js" type="module"></script>
 </body>
 </html>
