--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -33,16 +33,26 @@
                         32 bit
                         <input type="radio" name="bits" value="32">
                     </label>
+
+                    <label for="">
+                        64 bit
+                        <input type="radio" name="bits" value="64">
+                    </label>
+
+                    <label for="">
+                        128 bit
+                        <input type="radio" name="bits" value="64">
+                    </label>
                 </div>
 
                 <div class="custom-dropdown">
                     <div class="form-group">
                         <label for="first-operand">Multiplicant:</label>
-                        <input id="first-operand" type="text">
+                        <input id="first-operand" type="number">
                     </div>
                     <div class="form-group">
                         <label for="second-operand">Multiplier:</label>
-                        <input type="text" id="second-operand">
+                        <input type="number" id="second-operand">
                     </div>
                 </div>
 
