--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container"">
         <div class="form">
             <form >
                 <div class="form-group">
