--- a/MS-Projekat-3-main/app/pages/divider/divider.html
+++ b/MS-Projekat-3-main/app/pages/divider/divider.html
@@ -8,15 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="divident">
-        <div id="divident-view-port"></div>
-    </div>
     <div class="divisor">
         <div id="divisor-view-port"></div>
+    </div>
+    <div class="quotient">
+        <div id="quotient-view-port"></div>
     </div>
     <div class="product">
         <div id="product-view-port"></div>
     </div>
+    <div class="remainder">
+        <div id="remainder-view-port"></div>
+    </div>
     <script src="app.js" type="module"></script>
+
+    <button class="do">DO</button>
+    <button class="undo">UNDO</button>
 </body>
 </html>
