--- a/MS-Projekat-3-main/app/index.html
+++ b/MS-Projekat-3-main/app/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
 
-    <div class="container"">
         <div class="form">
             <form >
                 <div class="form-group">
