--- a/MS-Projekat-3-main/app/pages/divider/divider.html
+++ b/MS-Projekat-3-main/app/pages/divider/divider.html
@@ -23,6 +23,6 @@
     <script src="app.js" type="module"></script>
 
     <button class="do">DO</button>
-    <button class="undo">UNDO</button>
+    <button id="undo">UNDO</button>
 </body>
 </html>
