History log beta added

--- a/MS-Projekat-3-main/app/pages/multiplier/multiplier.html
+++ b/MS-Projekat-3-main/app/pages/multiplier/multiplier.html
@@ -39,6 +39,9 @@
             <p>PRODUCT</p>
             <div id="product-view-port"></div>
         </div>
+        <div class="test">
+            
+        </div>
         <script src="app.js" type="module"></script>
 
         <button id="do">STEP</button>
