--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="app.js" type="module" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -65,6 +66,6 @@
         <button class="test" defer>TEST</button>
         <button class="undo" defer>UNDO</button>
     </div>
-    <script src="app.js" type="module"></script>
+
 </body>
 </html>
