--- a/pages/multiplier-optimized/index.html
+++ b/pages/multiplier-optimized/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js" type="module" defer></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Multiplier optimized</h1>
-    <script src="app.js" type="module"></script>
 </body>
 </html>
