--- a/pages/multiplier/index.html
+++ b/pages/multiplier/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="app.js" type="module" defer></script>
     <title>Multiplieros</title>
 </head>
 
@@ -42,7 +43,6 @@
         <div class="test">
             
         </div>
-        <script src="app.js" type="module"></script>
 
         <button id="do">STEP</button>
         <button id="undo">UNDO</button>
