--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
         <div class="form">
-            <form >
+            <form class="form-center">
                 <div class="form-group">
                     <label for="type">Choose the type you want:</label>
                     <select id="type">
@@ -60,11 +60,7 @@
                 <button role = "submit" class="form-button">ACCEPT</button>
             </form>
         </div>
-        <div id="main">
-            
-        </div>
-        <button class="test" defer>TEST</button>
-        <button class="undo" defer>UNDO</button>
+    
     </div>
 
 </body>
