Set the stage for active animations

--- a/pages/multiplier/index.html
+++ b/pages/multiplier/index.html
@@ -26,7 +26,7 @@
                 <div id="multiplier-view-port"></div>
             </div>
     
-            <div class="multiplicant">
+            <div class="multiplicand">
                 <p>MULTIPLICANT</p>
                 <div id="multiplicant-view-port"></div>
             </div>
