Changing color depenting on the values

--- a/pages/multiplier/index.html
+++ b/pages/multiplier/index.html
@@ -34,6 +34,7 @@
             <div class="alu">
                 <p>ALU</p>
                 <div id="alu-view-port"></div>
+                <div class="inside-alu"></div>
             </div>
     
             <div class="control">
