Logic finished for 3/4

--- a/pages/divider/index.html
+++ b/pages/divider/index.html
@@ -36,7 +36,7 @@
                 <div id="control-view-port"></div>
             </div>
             <div class="remainder">
-                <p>REMAINER</p>
+                <p>REMAINDER</p>
                 <div id="remainder-view-port"></div>
             </div>
             
@@ -46,9 +46,9 @@
 
         <div id="historyContainer">
             <h3>History Log</h3>
-            <ol id="history">
+            <ul id="history">
                 
-            </ol>
+            </ul>
         </div>
     </div>
 </body>
