--- a/pages/multiplier/index.html
+++ b/pages/multiplier/index.html
@@ -26,7 +26,7 @@
                 <div id="multiplier-view-port"></div>
             </div>
     
-            <div class="multiplicant">
+            <div class="multiplicand">
                 <p>MULTIPLICAND</p>
                 <div id="multiplicant-view-port"></div>
             </div>
@@ -36,7 +36,7 @@
                 <div id="alu-view-port"></div>
             </div>
     
-            <div class="control">
+            <div class="control active">
                 <p>CONTROL</p>
                 <div id="control-view-port"></div>
             </div>
