Alu component got new veneers

--- a/pages/divider-optimized/index.html
+++ b/pages/divider-optimized/index.html
@@ -32,7 +32,7 @@
                 <div id="control-view-port"></div>
             </div>
             <div class="remainder">
-                <p>REMAINER</p>
+                <p>QUOTIENT/REMAINDER</p>
                 <div id="remainder-view-port"></div>
             </div>
             
