QUick fix for the activation of control in divider

--- a/pages/divider/index.html
+++ b/pages/divider/index.html
@@ -31,7 +31,7 @@
                 <p>ALU</p>
                 <div id="alu-view-port"></div>
             </div>
-            <div class="control active">
+            <div class="control">
                 <p>CONTROL</p>
                 <div id="control-view-port"></div>
             </div>
