--- a/index.html
+++ b/index.html
@@ -13,41 +13,31 @@
 
         <form class="form">
             <div class="form-group">
-                <label for="type">Choose the type you want:</label>
+                <label for="type">Izaberite željeni hardver:</label>
                 <select id="type">
-                    <option value="null"> </option>
-                    <option value="multiplier">Multiplier</option>
-                    <option value="multiplier-optimised">Optimised multiplier</option>
-                    <option value="divider">Divider</option>
-                    <option value="divider-optimised">Optimised divider</option>
+                    <option value="null"></option>
+                    <option value="multiplier">Multiplication</option>
+                    <option value="multiplier-optimised">Optimised multiplication</option>
+                    <option value="divider">Division</option>
+                    <option value="divider-optimised">Optimised division</option>
                 </select>
             </div>
 
             <div class="form-group">
                 <label for="">
                     16 bit
-                    <input type="radio" name="bits" value="16">
+                    <input id="bit16" type="radio" name="bits" value="16">
                 </label>
             
                 <label for="">
                     32 bit
                     <input type="radio" name="bits" value="32">
                 </label>
-
-                <label for="">
-                    64 bit
-                    <input type="radio" name="bits" value="64">
-                </label>
-
-                <label for="">
-                    128 bit
-                    <input type="radio" name="bits" value="64">
-                </label>
             </div>
 
             <div class="custom-dropdown">
                 <div class="form-group">
-                    <label for="first-operand">Multiplicant:</label>
+                    <label for="first-operand">Multiplicand:</label>
                     <input id="first-operand" type="number">
                 </div>
                 <div class="form-group">
@@ -56,7 +46,7 @@
                 </div>
             </div>
 
-            <button role = "submit" class="form-button">ACCEPT</button>
+            <button role = "submit" class="form-button">Dalje</button>
         </form>
     
     </div>
