Conclude and Reset added, 8-bit mode added also.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
             <div class="form-group">
                 <label for="">
+                    8 bit
+                    <input id="bit8" type="radio" name="bits" value="8">
+                </label>
+
+                <label for="">
                     16 bit
                     <input id="bit16" type="radio" name="bits" value="16">
                 </label>
