--- a/pages/divider/index.html
+++ b/pages/divider/index.html
@@ -53,6 +53,8 @@
             
             <button id="do">DO</button>
             <button id="undo">UNDO</button>
+            <button id="conclude">CONCLUDE</button>
+            <button id="reset">RESET</button>
         </div>
 
         <div id="historyContainer">
