--- a/pages/multiplier-optimized/index.html
+++ b/pages/multiplier-optimized/index.html
@@ -55,6 +55,8 @@
     
             <button id="do">STEP</button>
             <button id="undo">UNDO</button>
+            <button id="conclude">CONCLUDE</button>
+            <button id="reset">RESET</button>
         </div>
 
         <div id="historyContainer">
