--- a/pages/multiplier/index.html
+++ b/pages/multiplier/index.html
@@ -59,6 +59,8 @@
     
             <button id="do">STEP</button>
             <button id="undo">UNDO</button>
+            <button id="conclude">CONCLUDE</button>
+            <button id="reset">RESET</button>
         </div>
 
         
