Hide inputs on deselect

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="form-group">
                 <label for="type">Izaberite željeni hardver:</label>
                 <select id="type">
-                    <option value="null"></option>
+                    <option></option>
                     <option value="multiplier">Multiplication</option>
                     <option value="multiplier-optimised">Optimised multiplication</option>
                     <option value="divider">Division</option>
