Switched the last bits of text in Serbian, made quality of life improvements on multiplier

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" type="module" defer></script>
-    <title>Document</title>
+    <title>Računarska aritmetika</title>
 </head>
 <body>
     <div class="container">
@@ -16,10 +16,10 @@
                 <label for="type">Izaberite željeni hardver:</label>
                 <select id="type">
                     <option></option>
-                    <option value="multiplier">Multiplication</option>
-                    <option value="multiplier-optimised">Optimised multiplication</option>
-                    <option value="divider">Division</option>
-                    <option value="divider-optimised">Optimised division</option>
+                    <option value="multiplier">Množenje</option>
+                    <option value="multiplier-optimised">Množenje optimizovano</option>
+                    <option value="divider">Deljenje</option>
+                    <option value="divider-optimised">Deljenje optimizovano</option>
                 </select>
             </div>
 
