--- a/pages/divider-optimized/index.html
+++ b/pages/divider-optimized/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" type="module" defer></script>
-    <title>Document</title>
+    <title>Optimizovano deljenje</title>
 </head>
 <body>
     <div class="container">
