--- a/pages/multiplier-optimized/index.html
+++ b/pages/multiplier-optimized/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="app.js" type="module" defer></script>
-    <title>Multiplieros</title>
+    <title>Optimizovano množenje</title>
 </head>
 
 <body>
