Final quality of life changes

--- a/pages/divider/index.html
+++ b/pages/divider/index.html
@@ -29,6 +29,7 @@
             </div>
             <div class="alu">
                 <p>ALU</p>
+                <p id="alu-view-port"></p>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 485.09 167.82">
                     <defs>
                         <style>
